Thu Dec 27 14:43:14 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/.cvsignore: ignore autogenerated
	* include/tds.h src/replacements/vasprintf.c src/tds/convert.c:
	* src/tds/login.c src/tds/query.c src/tds/read.c:
	- remove some warnings

Thu Dec 27 11:20:55 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/common.c: make unixODBC happy
	* win32/config.h: define TDS_I64_FORMAT

Thu Dec 27 10:19:58 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/buffering.h:
	- remove warning if compiled with NDEBUG defined

Wed Dec 26 21:57:12 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/attributes.c: make it works

Wed Dec 26 19:44:47 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/freetds.conf.5: typo fix
	* src/ctlib/unittests/common.c: make tests compile
	* src/odbc/odbc.c: add diagnostic for truncate

Tue Dec 25 00:55:02 EST 2007	JK Lowden <jklowden@freetds.org>
	* freetds.conf doc/Makefile.am doc/freetds.conf.5 (added)
	- shortened default freetds.conf and moved documentation
	- to a proper man page.  Merry Christmas! 

Mon Dec 24 11:34:58 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h: removed unused fields

Sun Dec 23 16:08:29 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/apps/tsql.c 
	* src/ctlib/cs.c src/ctlib/unittests/common.c
	* src/dblib/dblib.c
	* src/tds/config.c src/tds/unittests/convert.c
	- added STD_DATETIME_FMT to allow for WIN32 shortcomings

Fri Dec 21 16:20:03 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/ct.c src/odbc/odbc.c src/tds/query.c:
	- make odbc cursor test work using sp_cursoropen with parameters

Fri Dec 21 11:38:47 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/common.c src/odbc/unittests/common.h:
	* src/odbc/unittests/cursor3.c src/odbc/unittests/cursor4.c:
	* src/odbc/unittests/cursor5.c:
	- cursor tests should work
