@@ -104,7 +104,11 @@ cd $WORKDIR
 find . \( -name \*.bb -o -name \*.bbg -o -name \*.da -o -name \*.gc\* \) -exec rm -f {} \;
 rm -rf autom4te.cache doc/doc covtmp coverage DBD-*
 cvsclean || true
-cp ../DBD-ODBC-1.13.tar.gz .
+if test "$(uname -m)" = "x86_64"; then
+	cp ../DBD-ODBC-1.15_2.tar.gz .
+else
+	cp ../DBD-ODBC-1.13.tar.gz .
+fi
 cp ../php5.2-latest.tar.bz2 .
 
 LDFLAGS='-lgcov' CFLAGS='-O0 -pipe -g -fprofile-arcs -ftest-coverage' sh autogen.sh --enable-extra-checks --prefix=$HOME/install --with-odbc-nodm=/usr --with-gnutls $FLAGS_ADD
@@ -144,7 +148,7 @@ fi
 
 # upload our test results
 cd logs
-../misc/online.pl < log.txt
+perl -pe "\$_ = '' if \$_ =~ /^2:bcp.c: In function 'bcp_colfmt'|^2:bcp.c:\\d+: warning: suggest parentheses around && within \\|\\|/" < log.txt | ../misc/online.pl
 upload "$OUTDIR/test" '*.html'
 cd ..
 
