@@ -1,3 +1,11 @@
+Wed Dec 28 14:44:16 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* misc/freetds_autobuild misc/test-other.sh:
+	- make amd64 works
+	* misc/test-auto.sh: add --help option
+	* src/tds/convert.c:
+	- fix overflow in tds_convert_char
+	- minor fixes for tds_strftime
+
 Thu Dec 27 14:43:14 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* doc/.cvsignore: ignore autogenerated
 	* include/tds.h src/replacements/vasprintf.c src/tds/convert.c:
